fix: wrap fix

--- a/Frontend/Day-9/style.css
+++ b/Frontend/Day-9/style.css
@@ -1,6 +1,5 @@
 :root{
     --booked-available: green;
-
 }
 *{
     
@@ -16,8 +15,8 @@ body{
 span{
     font-family:Georgia, 'Times New Roman', Times, serif;
     display:flex;
-    width:90px;
-    height:50px;
+    width:120px;
+    height:80px;
     margin:2px;
     border-radius: 5px;
     background-color: var(--booked-available);
@@ -25,11 +24,11 @@ span{
     justify-content: center;
     align-items: center;
     font-weight: bold;
-    
+    color: white;
 
 }
 span:hover{
-    background-color:white;
+    background-color:rgb(112, 16, 136);
     border:2px solid white;
     padding:22px;
 }
@@ -41,19 +40,18 @@ section{
     padding: 3px;
     justify-content: center;
     align-items: center;
-   
 }
 
 .container{
     position:absolute;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     align-self:center;
-    
-    background-color: rgb(233, 222, 222);
+    background-color: rgb(240, 241, 241);
     top:160px;
     width:80%;
-    border-radius: 10px;;
+    border-radius: 10px;
 }
 
 #container-child{
@@ -61,7 +59,8 @@ section{
     flex-direction: row;
     justify-content: space-around;
     margin:2px;
-    padding:10px 0px 5px 0px;
+    padding-top:15px;
+    padding-bottom: 15px;
 } 
 
 .column-1 {
@@ -70,16 +69,17 @@ section{
     flex-wrap: wrap;
     padding-right:10%;
     justify-content: center;
-    
     align-self: flex-start;
 }
+   
+    
 
 .column-2{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
     padding-left:10%;
+    justify-content: center;
     align-self: flex-end;
 }
 
@@ -94,18 +94,13 @@ p{
 #seats-count > div{
     
     position:relative;
-    border:2px solid peachpuff;
+    border:2px solid rgb(240, 239, 238);
     top:100px;
     padding:10px;
-    background-color: peru;
+    background-color: rgb(216, 230, 21);
     border-radius: 5px;
     margin-bottom:20px;
 
-}
-
-
-.booked{
-    background-color:orange;
 }
 
 
